src/objects/Deal__c.object
<CustomObject>
    <fields>
        <fullName>ProfitShareAmtAtSellFC__c</fullName>
        <label>Profit Share Amt At Sell FC</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ProjectedArtistBackendCalculation__c</fullName>
        <label>Projected Artist Backend Calculation</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ProjectedArtistEarnings__c</fullName>
        <formula>IF(ISPICKVAL(DealType__c, &apos;Flat&apos;),
/* TRUE */
TotalGuaranteesandOverhead__c,

/* FALSE - other Deal Types */
IF(GuaranteeAmount__c + InclusiveArtistExpensesPerDealCalc__c + ProjectedBonusGuarantee__c =
 MAX(
  /* LEFT SIDE of MAX */
  GuaranteeAmount__c + InclusiveArtistExpensesPerDealCalc__c + ProjectedBonusGuarantee__c,

  /* RIGHT SIDE of MAX */
  CASE(TEXT(DealType__c),
   &apos;Percentage of Gross&apos;, (Event__r.ProjectedNetGross__c * SplitBackendPercent__c),
   &apos;Percentage of Net&apos;, (Event__r.ProjectedNetPot__c * SplitBackendPercent__c),
   &apos;Promoter Profit&apos;, (Event__r.ProjectedToBeSharedAmount__c * SplitBackendPercent__c),
   &apos;Gross Split Point&apos;, (InclusiveArtistExpensesPerDealCalc__c + (Event__r.ProjectedToBeSharedAmount__c * SplitBackendPercent__c)),
  /* CASE() DEFAULT - and applies to all Retro/Step Up deal types */
   ProjectedBackend__c)

 /* END MAX*/
 ),

/* TRUE - Event did not go into percentages - guarantees paid out */
TotalGuaranteesandOverhead__c,

/* FALSE - Event went into percentages - artist participation/overage paid out */
CASE(TEXT(DealType__c),
 &apos;Percentage of Gross&apos;, (Event__r.ProjectedNetGross__c * SplitBackendPercent__c),
 &apos;Percentage of Net&apos;, (Event__r.ProjectedNetPot__c * SplitBackendPercent__c),
 &apos;Promoter Profit&apos;, (Event__r.ProjectedToBeSharedAmount__c * SplitBackendPercent__c),
 &apos;Gross Split Point&apos;, (InclusiveArtistExpensesPerDealCalc__c + (Event__r.ProjectedToBeSharedAmount__c * SplitBackendPercent__c)),
/* CASE() DEFAULT - and applies to all Retro/Step Up deal types */
 ProjectedBackend__c)

/* END IFs */
))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Projected Artist Earnings</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ProjectedArtistWalkout__c</fullName>
        <formula>IF(
   ISPICKVAL(DealType__c, &apos;Flat&apos;) ||
   ISPICKVAL(DealType__c, &apos;Percentage of Gross&apos;) ||
   ISPICKVAL(DealType__c, &apos;Percentage of Net&apos;) ||
   ISPICKVAL(DealType__c, &apos;Retro Gross Deal&apos;) ||
   ISPICKVAL(DealType__c, &apos;Retro Net Deal&apos;) ||
   ISPICKVAL(DealType__c, &apos;Step Up Gross Deal&apos;) ||
   ISPICKVAL(DealType__c, &apos;Step Up Net Deal&apos;) ||
   ISPICKVAL(DealType__c, &apos;Promoter Profit&apos;) ||
   ISPICKVAL(DealType__c, &apos;Gross Split Point&apos;),
      /* TRUE */
      ProjectedArtistEarnings__c + ProjectedBonus__c,

      /* FALSE */
      0
/* END IF */
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Projected Artist Walkout</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ProjectedBackend__c</fullName>
        <label>Projected Backend</label>
        <summarizedField>ArtistRetroStepUpDetail__c.ProjectedBackendNonFormula__c</summarizedField>
        <summaryForeignKey>ArtistRetroStepUpDetail__c.Deal__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ProjectedBonusGuarantee__c</fullName>
        <description>If Bonus.Apply To = Guarantee, then the bonus will be included in the guarantee for deal calculation purposes.</description>
        <label>Projected Bonus - Guarantee</label>
        <summarizedField>BonusDetail__c.BonusPotentialatProjection__c</summarizedField>
        <summaryFilterItems>
            <field>BonusDetail__c.ApplyTo__c</field>
            <operation>equals</operation>
            <value>Guarantee</value>
        </summaryFilterItems>
        <summaryForeignKey>BonusDetail__c.Deal__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ProjectedBonus__c</fullName>
        <label>Projected Bonus</label>
        <summarizedField>BonusDetail__c.BonusPotentialatProjection__c</summarizedField>
        <summaryForeignKey>BonusDetail__c.Deal__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ProjectedOverage__c</fullName>
        <formula>IF(RecordType.DeveloperName = &quot;Artist&quot; &amp;&amp; !ISPICKVAL(Type__c, &quot;Support&quot;) &amp;&amp; ProjectedArtistBackendCalculation__c &gt; GuaranteeAmount__c + InclusiveArtistExpensesPerDealCalc__c + BonusPotentialGuarantee__c,

/* Primary or Co-Headliner */
ProjectedArtistBackendCalculation__c - (GuaranteeAmount__c + InclusiveArtistExpensesPerDealCalc__c + BonusPotentialGuarantee__c),

/* Support */
0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Projected Overage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ProjectedToBeSharedAmount__c</fullName>
        <formula>IF(ISBLANK(SplitPercentage__c),
  IF(ISPICKVAL(Type__c, &quot;Primary Headliner&quot;),
    1,
    0),
  SplitPercentage__c
) * Event__r.ProjectedToBeSharedAmount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Projected To Be Shared Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Rank__c</fullName>
        <defaultValue>2</defaultValue>
        <description>Ordinal number that represents the artist&apos;s rank in the event lineup</description>
        <label>Rank</label>
        <precision>3</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RetroStepUpStartAtZero__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Used to determine if any attempted save of Retro/Step Up records includes at least one where the starting range is zero - a requirement.</description>
        <label>RetroStepUpStartAtZero</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RollUpAncillaryShareAmtAtProj__c</fullName>
        <label>Roll Up Ancillary Share Amt At Proj</label>
        <summarizedField>DealSettlementLedger__c.CurrentAmountAtProjectionNF__c</summarizedField>
        <summaryFilterItems>
            <field>DealSettlementLedger__c.TypeNF__c</field>
            <operation>equals</operation>
            <value>COGS,Ancillary</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>DealSettlementLedger__c.Share__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>DealSettlementLedger__c.Deal__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>RollUpAncillaryShareAmtAtSell__c</fullName>
        <label>Roll Up Ancillary Share Amt At Sell</label>
        <summarizedField>DealSettlementLedger__c.CurrentAmountAtSelloutNF__c</summarizedField>
        <summaryFilterItems>
            <field>DealSettlementLedger__c.TypeNF__c</field>
            <operation>equals</operation>
            <value>COGS,Ancillary</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>DealSettlementLedger__c.Share__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>DealSettlementLedger__c.Deal__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>RollUpArtistRetroCount__c</fullName>
        <label>Roll Up Artist Retro Count</label>
        <summaryForeignKey>ArtistRetroStepUpDetail__c.Deal__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>RollUpBonusDetailsCount__c</fullName>
        <label>Roll Up Bonus Details Count</label>
        <summaryForeignKey>BonusDetail__c.Deal__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>RollUpExpenseAdjustmentAtProjection__c</fullName>
        <label>Roll Up Expense Adjustment At Projection</label>
        <summarizedField>DealSettlementLedger__c.ExpenseAdjustmentAtProjectionNF__c</summarizedField>
        <summaryFilterItems>
            <field>DealSettlementLedger__c.TypeNF__c</field>
            <operation>equals</operation>
            <value>Expenses</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>DealSettlementLedger__c.Share__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>DealSettlementLedger__c.Deal__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>RollUpExpenseAdjustmentAtSellout__c</fullName>
        <label>Roll Up Expense Adjustment At Sellout</label>
        <summarizedField>DealSettlementLedger__c.ExpenseAdjustmentAtSelloutNF__c</summarizedField>
        <summaryFilterItems>
            <field>DealSettlementLedger__c.TypeNF__c</field>
            <operation>equals</operation>
            <value>Expenses</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>DealSettlementLedger__c.Share__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>DealSettlementLedger__c.Deal__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>RollUpPriCoProAncilShareAtProj__c</fullName>
        <label>Roll Up Pri Co-Pro Ancil Share At Proj</label>
        <summarizedField>DealSettlementLedger__c.PrimaryCoProShareAtProjectionNF__c</summarizedField>
        <summaryFilterItems>
            <field>DealSettlementLedger__c.TypeNF__c</field>
            <operation>equals</operation>
            <value>COGS,Ancillary</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>DealSettlementLedger__c.Share__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>DealSettlementLedger__c.Deal__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>RollUpPriCoProAncilShareAtSell__c</fullName>
        <label>Roll Up Pri Co-Pro Ancil Share At Sell</label>
        <summarizedField>DealSettlementLedger__c.PrimaryCoProShareAtSelloutNF__c</summarizedField>
        <summaryFilterItems>
            <field>DealSettlementLedger__c.TypeNF__c</field>
            <operation>equals</operation>
            <value>COGS,Ancillary</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>DealSettlementLedger__c.Share__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>DealSettlementLedger__c.Deal__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>RollUpPriCoProExpenseShareAtProj__c</fullName>
        <label>Roll Up Pri Co-Pro Expense Share At Proj</label>
        <summarizedField>DealSettlementLedger__c.PrimaryCoProShareAtProjectionNF__c</summarizedField>
        <summaryFilterItems>
            <field>DealSettlementLedger__c.TypeNF__c</field>
            <operation>equals</operation>
            <value>Expenses</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>DealSettlementLedger__c.Share__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>DealSettlementLedger__c.Deal__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>RollUpPriCoProExpenseShareAtSell__c</fullName>
        <label>Roll Up Pri Co-Pro Expense Share At Sell</label>
        <summarizedField>DealSettlementLedger__c.PrimaryCoProShareAtSelloutNF__c</summarizedField>
        <summaryFilterItems>
            <field>DealSettlementLedger__c.TypeNF__c</field>
            <operation>equals</operation>
            <value>Expenses</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>DealSettlementLedger__c.Share__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>DealSettlementLedger__c.Deal__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>RollUpTalentOverheadAmount__c</fullName>
        <label>Roll-Up Talent Overhead Amount</label>
        <summarizedField>TalentOverhead__c.Amount__c</summarizedField>
        <summaryForeignKey>TalentOverhead__c.Deal__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>RollUpTalentOverheadCount__c</fullName>
        <label>Roll Up Talent Overhead Count</label>
        <summaryForeignKey>TalentOverhead__c.Deal__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Scheduled_for_Currency_Recalc__c</fullName>
        <formula>IF 
( 
ISNULL(CurrencyExchange__c), 
TRUE, 
IF 
( 
ISNULL(CurrencyDate__c), 
IF 
( 
CurrencyExchange__r.IsCurrent__c = FALSE, 
TRUE, 
FALSE 
) , 
IF 
( 
AND(ISBLANK(CurrencyExchange__r.StartDate__c) = FALSE,ISBLANK(CurrencyExchange__r.EndDate__c) = FALSE) , 
IF 
( 
AND(CurrencyExchange__r.StartDate__c &lt;= CurrencyDate__c, CurrencyExchange__r.EndDate__c &gt;= CurrencyDate__c), 
FALSE, 
TRUE 
) , 
IF 
( 
AND(ISBLANK(CurrencyExchange__r.StartDate__c) = FALSE,ISBLANK(CurrencyExchange__r.EndDate__c) = TRUE), 
IF 
( 
(CurrencyExchange__r.StartDate__c &gt; CurrencyDate__c) = TRUE, 
TRUE, 
FALSE 
) , 
TRUE 
) 
) 
) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Scheduled for Currency Recalc</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SettlementArtistBackendCalculation__c</fullName>
        <label>Settlement Artist Backend Calculation</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SettlementArtistEarnings__c</fullName>
        <formula>IF(ISPICKVAL(DealType__c, &apos;Flat&apos;),
/* TRUE */
TotalGuaranteesandOverhead__c,

/* FALSE - other Deal Types */
IF(GuaranteeAmount__c + InclusiveArtistExpensesPerDealCalc__c + SettlementBonusGuarantee__c =
 MAX(
  /* LEFT SIDE of MAX */
  GuaranteeAmount__c + InclusiveArtistExpensesPerDealCalc__c + SettlementBonusGuarantee__c,

  /* RIGHT SIDE of MAX */
  CASE(TEXT(DealType__c),
   &apos;Percentage of Gross&apos;, (Event__r.SettlementNetGross__c * SplitBackendPercent__c),
   &apos;Percentage of Net&apos;, (Event__r.SettlementNetPot__c * SplitBackendPercent__c),
   &apos;Promoter Profit&apos;, (Event__r.SettlementToBeSharedAmount__c * SplitBackendPercent__c),
   &apos;Gross Split Point&apos;, (InclusiveArtistExpensesPerDealCalc__c + (Event__r.SettlementToBeSharedAmount__c * SplitBackendPercent__c)),
  /* CASE() DEFAULT - and applies to all Retro/Step Up deal types */
   SettlementBackend__c)

 /* END MAX*/
 ),

/* TRUE - Event did not go into percentages - guarantees paid out */
TotalGuaranteesandOverhead__c,

/* FALSE - Event went into percentages - artist participation/overage paid out */
CASE(TEXT(DealType__c),
 &apos;Percentage of Gross&apos;, (Event__r.SettlementNetGross__c * SplitBackendPercent__c),
 &apos;Percentage of Net&apos;, (Event__r.SettlementNetPot__c * SplitBackendPercent__c),
 &apos;Promoter Profit&apos;, (Event__r.SettlementToBeSharedAmount__c * SplitBackendPercent__c),
 &apos;Gross Split Point&apos;, (InclusiveArtistExpensesPerDealCalc__c + (Event__r.SettlementToBeSharedAmount__c * SplitBackendPercent__c)),
  /* CASE() DEFAULT - and applies to all Retro/Step Up deal types */
 SettlementBackend__c)

/* END IFs */
))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Settlement Artist Earnings</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SettlementArtistWalkout__c</fullName>
        <formula>IF(
ISPICKVAL(DealType__c, &apos;Flat&apos;) ||
ISPICKVAL(DealType__c, &apos;Percentage of Gross&apos;) ||
ISPICKVAL(DealType__c, &apos;Percentage of Net&apos;) ||
ISPICKVAL(DealType__c, &apos;Retro Gross Deal&apos;) ||
ISPICKVAL(DealType__c, &apos;Retro Net Deal&apos;) ||
ISPICKVAL(DealType__c, &apos;Step Up Gross Deal&apos;) ||
ISPICKVAL(DealType__c, &apos;Step Up Net Deal&apos;) ||
ISPICKVAL(DealType__c, &apos;Promoter Profit&apos;) ||
ISPICKVAL(DealType__c, &apos;Gross Split Point&apos;),
/* TRUE */
SettlementArtistEarnings__c + ProjectedBonus__c,

/* FALSE */
0
/* END IF */
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Settlement Artist Walkout</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SettlementBackend__c</fullName>
        <label>Settlement Backend</label>
        <summarizedField>ArtistRetroStepUpDetail__c.SettlementBackendNonFormula__c</summarizedField>
        <summaryForeignKey>ArtistRetroStepUpDetail__c.Deal__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>SettlementBonusGuarantee__c</fullName>
        <description>If Bonus.Apply To = Guarantee, then the bonus will be included in the guarantee for deal calculation purposes.</description>
        <label>Settlement Bonus - Guarantee</label>
        <summarizedField>BonusDetail__c.SettlementBonus__c</summarizedField>
        <summaryFilterItems>
            <field>BonusDetail__c.ApplyTo__c</field>
            <operation>equals</operation>
            <value>Guarantee</value>
        </summaryFilterItems>
        <summaryForeignKey>BonusDetail__c.Deal__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>SettlementBonus__c</fullName>
        <label>Settlement Bonus</label>
        <summarizedField>BonusDetail__c.SettlementBonus__c</summarizedField>
        <summaryForeignKey>BonusDetail__c.Deal__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>SettlementInclTotalSupportExpenses__c</fullName>
        <formula>IF(ISPICKVAL(StageType__c, &quot;Plan&quot;), Event__r.TotalSupportActExpenses__c,
IF(ISPICKVAL(StageType__c, &quot;Settlement&quot;),  Event__r.SettlementTotalSupportActExpenses__c,
0))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Settlement Incl Total Support Expenses</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ShareInTalentOverhead__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Share In Talent Overhead</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SourceSystemId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>SourceSystemId</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>SplitBackendPercent__c</fullName>
        <label>Split Backend %</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SplitPercentage__c</fullName>
        <label>Split %</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>StageType__c</fullName>
        <label>Stage Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Plan</fullName>
                    <default>true</default>
                    <label>Plan</label>
                </value>
                <value>
                    <fullName>Projection</fullName>
                </value>
                <value>
                    <fullName>Settlement</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SupportActShare__c</fullName>
        <formula>IF(FIND(&quot;Support&quot;, TEXT(DealCalculation__c)) &gt; 0,
  IF(ISBLANK(SplitPercentage__c),
    IF(ISPICKVAL(Type__c, &quot;Primary Headliner&quot;),
      1,
      0),
    SplitPercentage__c
  ) * Event__r.TotalSupportActExpenses__c,
  0
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Support Act Share</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TotalGuaranteesandOverhead__c</fullName>
        <formula>GuaranteeAmount__c +  ArtistSuppliedSL__c  +  OtherTalentAmount__c +  RollUpTalentOverheadAmount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Guarantees &amp; Overhead</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TypeSort__c</fullName>
        <description>Used to help sorting on the Event Offer Sheet tab.</description>
        <formula>CASE(Type__c,
&apos;Primary Headliner&apos;, -1,
&apos;Co-Headliner&apos;, BLANKVALUE(Rank__c, 999),
&apos;Support&apos;, 1000,
1001)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Type Sort</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Primary Headliner</fullName>
                </value>
                <value>
                    <fullName>Co-Headliner</fullName>
                </value>
                <value>
                    <fullName>Support</fullName>
                </value>
                <value>
                    <fullName>Venue</fullName>
                </value>
                <value>
                    <fullName>3rd Party</fullName>
                </value>
                <value>
                    <fullName>Artist</fullName>
                </value>
                <value>
                    <fullName>Internal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>VenueOwnership__c</fullName>
        <description>Drives sharing rules to provide edit access to booking members of the venue&apos;s primary office when Owned/Operated</description>
        <label>Venue Ownership</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fxAncillaryShareAmountAtProjection__c</fullName>
        <formula>(AncillaryShareAmountAtProjection__c / (CurrencyExchange__r.ExchangeRate__c))</formula>
        <label>Ancil. Share Amt At Projection (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fxAncillaryShareAmountAtSellout__c</fullName>
        <formula>(AncillaryShareAmountAtSellout__c / (CurrencyExchange__r.ExchangeRate__c))</formula>
        <label>Ancillary Share Amount At Sellout (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fxAncillaryShareAmtAtProjFC__c</fullName>
        <formula>(AncillaryShareAmtAtProjFC__c / (CurrencyExchange__r.ExchangeRate__c))</formula>
        <label>Ancillary Share Amt At Proj FC (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fxAncillaryShareAmtAtSellFC__c</fullName>
        <formula>(AncillaryShareAmtAtSellFC__c / (CurrencyExchange__r.ExchangeRate__c))</formula>
        <label>Ancillary Share Amt At Sell FC (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fxArtistBackendCalculationPotential__c</fullName>
        <formula>(ArtistBackendCalculationPotential__c / (CurrencyExchange__r.ExchangeRate__c))</formula>
        <label>Artist Backend Calc Poten. (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fxArtistEarningsPotential__c</fullName>
        <formula>(ArtistEarningsPotential__c / (CurrencyExchange__r.ExchangeRate__c))</formula>
        <label>Artist Earnings Potential (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fxArtistSuppliedSL__c</fullName>
        <formula>(ArtistSuppliedSL__c / (CurrencyExchange__r.ExchangeRate__c))</formula>
        <label>Artist Supplied S&amp;L (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fxArtistWalkoutPotential__c</fullName>
        <formula>(ArtistWalkoutPotential__c / (CurrencyExchange__r.ExchangeRate__c))</formula>
        <label>Artist Walkout Potential (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fxBackendPotential__c</fullName>
        <formula>(BackendPotential__c / (CurrencyExchange__r.ExchangeRate__c))</formula>
        <label>Backend Potential (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fxBonusPotentialGuarantee__c</fullName>
        <formula>(BonusPotentialGuarantee__c / (CurrencyExchange__r.ExchangeRate__c))</formula>
        <label>Bonus Potential - Guarantee (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fxBonusPotential__c</fullName>
        <formula>(BonusPotential__c / (CurrencyExchange__r.ExchangeRate__c))</formula>
        <label>Bonus Potential (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fxCoPromoterBonusAtProjection__c</fullName>
        <formula>(CoPromoterBonusAtProjection__c / (CurrencyExchange__r.ExchangeRate__c))</formula>
        <label>Co-Promoter Bonus At Projection (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fxCoPromoterBonusAtSellout__c</fullName>
        <formula>(CoPromoterBonusAtSellout__c / (CurrencyExchange__r.ExchangeRate__c))</formula>
        <label>Co-Promoter Bonus At Sellout (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fxCoPromoterWalkoutAtProjection__c</fullName>
        <formula>(CoPromoterWalkoutAtProjection__c / (CurrencyExchange__r.ExchangeRate__c))</formula>
        <label>Co-Promoter Walkout At Projection (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fxCoPromoterWalkoutAtSellout__c</fullName>
        <formula>(CoPromoterWalkoutAtSellout__c / (CurrencyExchange__r.ExchangeRate__c))</formula>
        <label>Co-Promoter Walkout At Sellout (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fxExpenseAdjustShareAmtAtProjFC__c</fullName>
        <formula>(ExpenseAdjustShareAmtAtProjFC__c / (CurrencyExchange__r.ExchangeRate__c))</formula>
        <label>Exp. Adj Share Amt At Proj FC (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fxExpenseAdjustShareAmtAtSellFC__c</fullName>
        <formula>(ExpenseAdjustShareAmtAtSellFC__c / (CurrencyExchange__r.ExchangeRate__c))</formula>
        <label>Exp Adj Share Amt At Sell FC (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fxExpenseAdjustmentShareAmountAtProj__c</fullName>
        <formula>(ExpenseAdjustmentShareAmountAtProj__c / (CurrencyExchange__r.ExchangeRate__c))</formula>
        <label>Expense Adj Share Amt At Proj (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fxExpenseAdjustmentShareAmountAtSell__c</fullName>
        <formula>(ExpenseAdjustmentShareAmountAtSell__c / (CurrencyExchange__r.ExchangeRate__c))</formula>
        <label>Expense Adj Share Amount At Sell (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fxGuaranteeAmount__c</fullName>
        <formula>(GuaranteeAmount__c / (CurrencyExchange__r.ExchangeRate__c))</formula>
        <label>Guarantee Amount (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fxInclusiveArtistExpensesPerDealCalc__c</fullName>
        <formula>(InclusiveArtistExpensesPerDealCalc__c / (CurrencyExchange__r.ExchangeRate__c))</formula>
        <label>Inc. Artist Exp. Per Deal Calc (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fxLNEAncillaryShareAmountAtProjection__c</fullName>
        <formula>(LNEAncillaryShareAmountAtProjection__c / (CurrencyExchange__r.ExchangeRate__c))</formula>
        <label>LNE Ancil Share Amt. At Proj. (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fxLNEAncillaryShareAmountAtSellout__c</fullName>
        <formula>(LNEAncillaryShareAmountAtSellout__c / (CurrencyExchange__r.ExchangeRate__c))</formula>
        <label>LNE Ancil Share Amt. At Sellout (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fxLNECoPromoterWalkoutAtProjection__c</fullName>
        <formula>(LNECoPromoterWalkoutAtProjection__c / (CurrencyExchange__r.ExchangeRate__c))</formula>
        <label>LNE Co-Pro Walkout At Proj. (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fxLNECoPromoterWalkoutAtSellout__c</fullName>
        <formula>(LNECoPromoterWalkoutAtSellout__c / (CurrencyExchange__r.ExchangeRate__c))</formula>
        <label>LNE Co-Promoter Walkout At Sellout (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fxLNEExpenseAdjShareAmountAtProj__c</fullName>
        <formula>(LNEExpenseAdjShareAmountAtProj__c / (CurrencyExchange__r.ExchangeRate__c))</formula>
        <label>LNE Exp Adj Share Amt. At Proj (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fxLNEExpenseAdjShareAmountAtSell__c</fullName>
        <formula>(LNEExpenseAdjShareAmountAtSell__c / (CurrencyExchange__r.ExchangeRate__c))</formula>
        <label>LNE Exp. Adj Share Amt. At Sell (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fxLNEProfitShareAmountAtProjection__c</fullName>
        <formula>(LNEProfitShareAmountAtProjection__c / (CurrencyExchange__r.ExchangeRate__c))</formula>
        <label>LNE Profit Share Amt. At Proj. (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fxLNEProfitShareAmountAtSellout__c</fullName>
        <formula>(LNEProfitShareAmountAtSellout__c / (CurrencyExchange__r.ExchangeRate__c))</formula>
        <label>LNE Profit Share Amount At Sellout (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fxOtherTalentAmount__c</fullName>
        <formula>(OtherTalentAmount__c / (CurrencyExchange__r.ExchangeRate__c))</formula>
        <label>Other Talent Amount (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fxOveragePotential__c</fullName>
        <formula>(OveragePotential__c / (CurrencyExchange__r.ExchangeRate__c))</formula>
        <label>Overage Potential (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fxPotentialInclusiveArtistExpenses__c</fullName>
        <formula>(PotentialInclusiveArtistExpenses__c / (CurrencyExchange__r.ExchangeRate__c))</formula>
        <label>Potential Inclusive Artist Exp (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fxPotentialToBeSharedAmount__c</fullName>
        <formula>(PotentialToBeSharedAmount__c / (CurrencyExchange__r.ExchangeRate__c))</formula>
        <label>Potential To Be Shared Amount (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
</CustomObject>